# cv

./: .gitignore  .mcp.json  .mcpbignore  2025_FranciscoPerezSorrosal_CV_English.tex  CLAUDE.md  MCPB_DEV_PRACTICES_IMPROVEMENTS.md  MCPB_TEST_CONSIDERATIONS.md  Makefile  README.md  README_CICD.md  README_DEV.md  README_USER.md  RELEASE_PROCESS.md  install_claude_mcp.sh  manifest.json  pyproject.toml  requirements.txt  resume_english.tex  server.json  server.json.template  start_mcpb.sh  tikz.sty
.claude/: settings.local.json
.claude/commands/: create-mcpb.md  get-job-desc.md
.github/: README.md
.github/workflows/: auto-rebase-mcp.yml  check-authorization.yml  check-mcpb-creation.yml  claude-code-review.yml  claude-cv-improver.yml  rebase-status-check.yml  release-mcpb.yml
config/: claude.json
scripts/: release.sh
src/cv_mcp_server/: main.py  utils.py
src/cv_mcp_server/prompts/: summary.yaml
