[project]
name = "cv-mcp-server"
version = "0.0.2"
description = "MCP server using Anthropic library to expose a PDF CV as a resource."
license = {text = "MIT"}
authors = [
    {name = "Francisco Perez Sorrosal", email = "fperezsorrosal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", # Or your preferred license
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pymupdf4llm>=0.0.24,<0.0.25",
    "mcp[cli]>=1.9.2,<2",
    "loguru>=0.7.3,<0.8",
]

[project.urls]
"Homepage" = "https://github.com/francisco-perez-sorrosal/cv"
"Bug Tracker" = "https://github.com/francisco-perez-sorrosal/cv/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cv_mcp_server = { path = ".", editable = true }

[tool.pixi.feature.dev.pypi-dependencies]
build = ">=1.3.0,<2"
pip = ">=25.2,<26"
uv = "*"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
mcps="python src/cv_mcp_server/main.py"
start="python src/cv_mcp_server/main.py"

# MCPB (MCP Bundle) tasks - updated to use lib directory approach
python-bundle="mkdir -p python-dist && pixi run -e dev python -m build --wheel --outdir python-dist && echo 'Wheel built and ready for MCPB bundle'"
update-mcpb-deps="pixi run -e dev uv sync && pixi run -e dev uv lock && pixi run -e dev uv export --no-hashes --format requirements-txt > requirements.txt"
mcp-bundle="rm -rf lib/ && mkdir -p lib && pixi run -e dev python -m pip install -r requirements.txt --target lib --upgrade --force-reinstall"
pack="BUNDLE_NAME=$(python3 -c \"import json; print(f\\\"{json.load(open('manifest.json'))['name']}-{json.load(open('manifest.json'))['version']}.mcpb\\\")\") && npx @anthropic-ai/mcpb pack . mcpb-package/$BUNDLE_NAME"
clean-bundles="rm -rf python-dist/ mcpb-package/ lib/"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cv_mcp_server"]

[project.scripts]
cv-mcp-server = "cv_mcp_server.main:main"

[tool.setuptools]
packages = ["cv_mcp_server"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warnings_as_errors = true
strict = true
# For FastAPI and Pydantic, if needed:
# plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = [
    "aiofiles",
    "multipart"
]
ignore_missing_imports = true

